Added playlist put method
