# swagger.json
@@ -21,7 +21,9 @@
             }
           }
         ],
-        "tags": ["auth"]
+        "tags": [
+          "auth"
+        ]
       }
     },
     "/auth/logout": {
@@ -33,35 +35,12 @@
         },
         "summary": "Logs a user out",
         "operationId": "logout a user",
-        "tags": ["auth"]
+        "tags": [
+          "auth"
+        ]
       }
     },
     "/playlists/": {
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/playlist"
-              }
-            }
-          }
-        },
-        "summary": "List all playlists",
-        "operationId": "list all playlists",
-        "parameters": [
-          {
-            "name": "X-Fields",
-            "in": "header",
-            "type": "string",
-            "format": "mask",
-            "description": "An optional fields mask"
-          }
-        ],
-        "tags": ["playlist"]
-      },
       "post": {
         "responses": {
           "201": {
@@ -90,7 +69,36 @@
             "description": "An optional fields mask"
           }
         ],
-        "tags": ["playlist"]
+        "tags": [
+          "playlist"
+        ]
+      },
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/playlist"
+              }
+            }
+          }
+        },
+        "summary": "List all playlists",
+        "operationId": "list all playlists",
+        "parameters": [
+          {
+            "name": "X-Fields",
+            "in": "header",
+            "type": "string",
+            "format": "mask",
+            "description": "An optional fields mask"
+          }
+        ],
+        "tags": [
+          "playlist"
+        ]
       }
     },
     "/playlists/{playlist_id}": {
@@ -103,6 +111,41 @@
           "type": "string"
         }
       ],
+      "put": {
+        "responses": {
+          "200": {
+            "description": "Playlist successfully edited"
+          },
+          "400": {
+            "description": "Playlist_id must be a valid UUID"
+          },
+          "201": {
+            "description": "Playlist successfully created"
+          }
+        },
+        "summary": "Edit or create a playlist by the identifier passed",
+        "operationId": "edit a playlist",
+        "parameters": [
+          {
+            "name": "payload",
+            "required": true,
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/playlist"
+            }
+          },
+          {
+            "name": "X-Fields",
+            "in": "header",
+            "type": "string",
+            "format": "mask",
+            "description": "An optional fields mask"
+          }
+        ],
+        "tags": [
+          "playlist"
+        ]
+      },
       "get": {
         "responses": {
           "200": {
@@ -126,35 +169,12 @@
             "description": "An optional fields mask"
           }
         ],
-        "tags": ["playlist"]
+        "tags": [
+          "playlist"
+        ]
       }
     },
     "/users/": {
-      "get": {
-        "responses": {
-          "200": {
-            "description": "Success",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/user"
-              }
-            }
-          }
-        },
-        "summary": "List all registered users",
-        "operationId": "list all users",
-        "parameters": [
-          {
-            "name": "X-Fields",
-            "in": "header",
-            "type": "string",
-            "format": "mask",
-            "description": "An optional fields mask"
-          }
-        ],
-        "tags": ["user"]
-      },
       "post": {
         "responses": {
           "201": {
@@ -183,7 +203,36 @@
             "description": "An optional fields mask"
           }
         ],
-        "tags": ["user"]
+        "tags": [
+          "user"
+        ]
+      },
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/user"
+              }
+            }
+          }
+        },
+        "summary": "List all registered users",
+        "operationId": "list all users",
+        "parameters": [
+          {
+            "name": "X-Fields",
+            "in": "header",
+            "type": "string",
+            "format": "mask",
+            "description": "An optional fields mask"
+          }
+        ],
+        "tags": [
+          "user"
+        ]
       }
     },
     "/users/{public_id}": {
@@ -219,7 +268,9 @@
             "description": "An optional fields mask"
           }
         ],
-        "tags": ["user"]
+        "tags": [
+          "user"
+        ]
       }
     }
   },
@@ -228,8 +279,12 @@
     "version": "1.0",
     "description": "A RESTful Flask web service for Spotify playlists"
   },
-  "produces": ["application/json"],
-  "consumes": ["application/json"],
+  "produces": [
+    "application/json"
+  ],
+  "consumes": [
+    "application/json"
+  ],
   "tags": [
     {
       "name": "user",
@@ -246,7 +301,11 @@
   ],
   "definitions": {
     "user": {
-      "required": ["email", "password", "username"],
+      "required": [
+        "email",
+        "password",
+        "username"
+      ],
       "properties": {
         "email": {
           "type": "string",
@@ -268,7 +327,11 @@
       "type": "object"
     },
     "playlist": {
-      "required": ["datasource", "playlist_link", "screen_name"],
+      "required": [
+        "datasource",
+        "playlist_link",
+        "screen_name"
+      ],
       "properties": {
         "id": {
           "type": "string",
@@ -294,7 +357,10 @@
       "type": "object"
     },
     "auth_details": {
-      "required": ["email", "password"],
+      "required": [
+        "email",
+        "password"
+      ],
       "properties": {
         "email": {
           "type": "string",
